// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The <UserForm /> component componentDidUpdate is run when a new user is received and the state is reset 1`] = `
<View
  hasChanged={false}
  inputs={
    Object {
      "address": "",
      "company": "",
      "email": "",
      "name": "",
      "phone": "",
    }
  }
  onCancel={[Function]}
  onChange={[Function]}
  onSave={[Function]}
/>
`;

exports[`The <UserForm /> component componentDidUpdate is run when a new user is received and the state is reset 2`] = `
<View
  hasChanged={false}
  inputs={
    Object {
      "address": "958 Brevoort Place, Ona, Maine, 2433",
      "company": "ZOLAREX",
      "email": "bates.washington@zolarex.io",
      "name": "Bates Washington",
      "phone": "+1 (915) 447-2207",
    }
  }
  onCancel={[Function]}
  onChange={[Function]}
  onSave={[Function]}
/>
`;

exports[`The <UserForm /> component renders only the form's view 1`] = `
<View
  hasChanged={false}
  inputs={
    Object {
      "address": "",
      "company": "",
      "email": "",
      "name": "",
      "phone": "",
    }
  }
  onCancel={[Function]}
  onChange={[Function]}
  onSave={[Function]}
/>
`;
